Fixed comment spacing

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,11 +1,3 @@
-/*
-#90A955
-ECF39E214936
-214936
-214936
-*/
-
-
 .clientSelector {
     height: 100%;
     width: 75%;
@@ -15,11 +7,9 @@ ECF39E214936
     border: none;
     background-color: #F1E0C5;
 }
-
 .clientSelectorContent {
     font-size: 12pt;
 }
-
 body{
   background-color:#71816D;
 }
@@ -29,26 +19,22 @@ header{
 table, tr, td, th {
     border: 1px black solid;
 }
-
 table {
     width: 100%;
     background-color: #214936;
     color: #F1E0C5;
 }
-
 thead{
   color:#214936;
   font-weight: bold;
   background-color: #F1E0C5;
 
 }
-
 #siteTitle{
   text-align: center;
   font-weight: bold;
   font-size: 25px;
 }
-
 .siteTableRow{
   transition: 0.3s;
   background-color: #214936;
@@ -68,11 +54,9 @@ thead{
   background-color:#C9B79C;
   color: #214936;
 }
-
 div.clientDescription {
   color: #F1E0C5;
 }
-
 h3.clientDescription {
     text-align: center;
     text-weight: bold;
@@ -91,7 +75,6 @@ h5.clientDescription {
     border: 1px solid #ccc;
     background-color: #f1f1f1;
 }
-
 .tab button {
     background-color: #F1E0C5;
     color:#214936;
@@ -104,19 +87,16 @@ h5.clientDescription {
     transition: 0.3s;
     /*width: 10%;*/
 }
-
 .tab button:hover {
     transform: scale(1.1);
     background-color:#C9B79C;
 color: #214936;
 
 }
-
 .tab button.active {
   color: #F1E0C5;
   background-color:#214936;
 }
-
 .tabcontent {
     display: none;
     padding: 6px 12px;
@@ -124,19 +104,16 @@ color: #214936;
     border-top: none;
     color:#F1E0C5;
 }
-
 .activeSite {
     background-color: #F1E0C5;
     color: #214936;
 }
-
 .tabSD {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #F1E0C5;
     color:#214936;
 }
-
 .tabSD button {
   background-color: #F1E0C5;
   color:#214936;
@@ -148,17 +125,14 @@ color: #214936;
     transition: 0.3s;
     /*width: 10%;*/
 }
-
 .tabSD button:hover {
   transform: scale(1.1);
   background-color:#C9B79C;
   color: #214936;
 }
-
 .tabSD button.active {
   color: #F1E0C5;
   background-color:#214936;}
-
 .tabcontentSD {
     display: none;
     padding: 6px 12px;
@@ -166,4 +140,16 @@ color: #214936;
     border-top: none;
     background-color: #F1E0C5;
 
+}
+label {
+    width: 70px;
+}
+input {
+    width: 100% - 70px;
+}
+#formCommentName {
+    height: 24px;
+}
+#formCommentText {
+    height: 96px;
 }
